сетка каталога и некоторые доработки

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
   	<header class="main-header">
   	  <div class="container">
-  	    <a class="main-header-logo">
-  	      <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nёrds">
-  	    </a>
   		<nav class="main-navigation">
+  		  <a class="main-header-logo">
+  	        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nёrds">
+  	      </a>
   		  <ul class="site-navigation">
   		    <li><a href="studio.html">Студия</a></li>
   			<li><a href="clients.html">Клиенты</a></li>
@@ -33,7 +33,7 @@
   	  <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
 
   	  <div class="studio-features">
-  	    <div class="container-studio-feachers">
+  	    <div class="container">
           <h2 class="visually-hidden">Особенности студии</h2>
           <ul class="studio-features-list">
             <li class="studio-features-item studio-features-item-1">
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-	  <div class="main-container">
+	  <div class="container">
   	    <section class="products">
   		  <h2 class="visually-hidden">Наши продукты</h2>
   		  <ul class="products-list">
