--- a/catalog.html
+++ b/catalog.html
@@ -10,10 +10,10 @@
   <body>
 	<header class="main-header">
   	  <div class="container">
-  	    <a class="main-header-logo" href="index.html">
-  	      <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nёrds">
-  	    </a>
   		<nav class="main-navigation">
+  		  <a class="main-header-logo" href="index.html">
+  	        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nёrds">
+  	      </a>
   		  <ul class="site-navigation">
   		    <li><a href="studio.html">Студия</a></li>
   			<li><a href="clients.html">Клиенты</a></li>
@@ -34,144 +34,146 @@
   	      <h1>Магазин готовых шаблонов</h1>
   	    </div>
   	  </div>
-      <div class="main-container-catalog">
-  	    <section class="filters">
-  	  	  <h2 class="visually-hidden">Фильтр товаров</h2>
-  	  	    <form class="filter" method="get" action="https://echo.htmlacademy.ru">
-              <fieldset class="filter-group">
-              	<legend>Стоимость</legend>
-              </fieldset>
-              <fieldset class="filter-group">
-                <legend>Сетка</legend>
-                <ul class="filters-list">
-          	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="adaptive" id="filter-adaptive" checked>
-          	      	<label for="filter-adaptive">Адаптивная</label>
-          	      </li>
-          	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="fixed" id="filter-fixed">
-          	      	<label for="filter-fixed">Фиксированная</label>
-          	      </li>
-          	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="fluid" id="filter-fluid">
-          	      	<label for="filter-fluid">Резиновая</label>
-          	      </li>
-                </ul>
-              </fieldset>
-              <fieldset class="filter-group">
-                <legend>Особенности</legend>
-                <ul class="filters-list">
-          	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" id="filter-slider" checked>
-          	      	<label for="filter-slider">Слайдер</label>
-          	      </li>
-          	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="advantage-block" id="filter-advantage-block">
-          	      	<label for="filter-advantage-block">Блок преимуществ</label>
-          	      </li>
-          	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" id="filter-news" checked>
-          	      	<label for="filter-news">Новости</label>
-          	      </li>
-          	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="gallery" id="filter-gallery">
-          	      	<label for="filter-gallery">Галерея</label>
-          	      </li>
-          	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="shopping-cart" id="filter-shopping-cart">
-          	      	<label for="filter-shopping-cart">Корзина</label>
-          	      </li>
-                </ul>
-              </fieldset>
-              <button type="submit" class="filter-button btn">Показать</button>
-            </form>
-	    </section>
+  	  <div class="container">
+        <div class="main-container-catalog">
+  	      <section class="filters">
+  	  	    <h2 class="visually-hidden">Фильтр товаров</h2>
+  	  	      <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+                <fieldset class="filter-group">
+              	  <legend>Стоимость</legend>
+                </fieldset>
+                <fieldset class="filter-group">
+                  <legend>Сетка</legend>
+                  <ul class="filters-list">
+          	        <li>
+          	      	  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="adaptive" id="filter-adaptive" checked>
+          	      	  <label for="filter-adaptive">Адаптивная</label>
+          	        </li>
+          	        <li>
+          	      	  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="fixed" id="filter-fixed">
+          	      	  <label for="filter-fixed">Фиксированная</label>
+          	        </li>
+          	        <li>
+          	      	  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="fluid" id="filter-fluid">
+          	      	  <label for="filter-fluid">Резиновая</label>
+          	        </li>
+                  </ul>
+                </fieldset>
+                <fieldset class="filter-group">
+                  <legend>Особенности</legend>
+                  <ul class="filters-list">
+          	        <li>
+          	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" id="filter-slider" checked>
+          	      	  <label for="filter-slider">Слайдер</label>
+          	        </li>
+          	        <li>
+          	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="advantage-block" id="filter-advantage-block">
+          	      	  <label for="filter-advantage-block">Блок преимуществ</label>
+          	        </li>
+          	        <li>
+          	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" id="filter-news" checked>
+          	      	  <label for="filter-news">Новости</label>
+          	        </li>
+          	        <li>
+          	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="gallery" id="filter-gallery">
+          	      	  <label for="filter-gallery">Галерея</label>
+          	        </li>
+          	        <li>
+          	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="shopping-cart" id="filter-shopping-cart">
+          	      	  <label for="filter-shopping-cart">Корзина</label>
+          	        </li>
+                  </ul>
+                </fieldset>
+                <button type="submit" class="filter-button btn">Показать</button>
+              </form>
+	      </section>
           
 
-	    <section class="catalog">
-		  <h2 class="visually-hidden">Каталог</h2>
+	      <section class="catalog">
+		    <h2 class="visually-hidden">Каталог</h2>
 
-		  <div class="catalog-sorting">
-            <b>Сортировать:</b>
-		    <ul class="sorting-buttons">
-              <li>
-                <a class="sorting-btn" href="#">По цене</a>
-              </li>
-              <li>
-                <a class="sorting-btn" href="#">По типу</a>
-              </li>
-              <li>
-                <a class="sorting-btn" href="#">По названию</a>
-              </li>
-            </ul>
-            <ul class="sorting-range">
-              <li>
-                <button class="btn sorting-btn sorting-btn-down" type="button">Сортировка по убыванию</button>
-              </li>
-              <li>
-                <button class="btn sorting-btn sorting-btn-up" type="button">Сортировка по возрастанию</button>
-              </li>
-            </ul>
-          </div>
+		    <div class="catalog-sorting">
+              <b>Сортировать:</b>
+		      <ul class="sorting-buttons">
+                <li>
+                  <a class="sorting-btn" href="#">По цене</a>
+                </li>
+                <li>
+                  <a class="sorting-btn" href="#">По типу</a>
+                </li>
+                <li>
+                  <a class="sorting-btn" href="#">По названию</a>
+                </li>
+              </ul>
+              <ul class="sorting-range">
+                <li>
+                  <button class="btn sorting-btn sorting-btn-down" type="button">Сортировка по убыванию</button>
+                </li>
+                <li>
+                  <button class="btn sorting-btn sorting-btn-up" type="button">Сортировка по возрастанию</button>
+                </li>
+              </ul>
+            </div>
         
-          <ul class="catalog-list">
-		    <li class="catalog-item">
-			  <div class="description-hover">
-                <h3><a class="catalog-item-title">Sedona</a></h3>
-                <p>Информационный сайт для туристов</p>
-                <a class="btn price-btn" href="#">9900 руб.</a>
-              </div>
-              <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
-		    </li>
-		    <li class="catalog-item">
-			  <div class="description-hover">
-                <h3><a class="catalog-item-title">Pink App</a></h3>
-                <p>Продуктовый лендинг  приложения для iOs и Android</p>
-                <a class="btn price-btn" href="#">9900 руб.</a>
-              </div>
-              <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
-            </li>
-	        <li class="catalog-item">
-			  <div class="description-hover">
-                <h3><a class="catalog-item-title">Barbershop</a></h3>
-                <p>Сайт салона красоты. Для мужчин, да.</p>
-                <a class="btn price-btn" href="#">9900 руб.</a>
-              </div>	
-              <img src="img/img-barbershop.jpg" width="360" height="576" alt=" Borodinski">
-	        </li>
-		    <li class="catalog-item">
-              <div class="description-hover">
-                <h3><a class="catalog-item-title">Mishka</a></h3>
-                <p>Интернет-магазин вязанных игрушек</p>
-                <a class="btn price-btn" href="#">9900 руб.</a>
-              </div>	
-              <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
-		    </li>
-		    <li class="catalog-item">
-			  <div class="description-hover">
-                <h3><a class="catalog-item-title">A plus</a></h3>
-                <p>Лендинг курсов повышения квалификации</p>
-                <a class="btn price-btn" href="#">9900 руб.</a>
-              </div>
-              <img src="img/img-aplus.jpg" width="360" height="576" alt="А plus">	
-		    </li>
-		    <li class="catalog-item">
-		      <div class="description-hover">
-                <h3><a class="catalog-item-title">Кваст</a></h3>
-                <p>Промо-сайт производителя крафтового кваса</p>
-                <a class="btn price-btn" href="#">9900 руб.</a>
-              </div>
-              <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
-		    </li>
-		  </ul>
+            <ul class="catalog-list">
+		      <li class="catalog-item">
+			    <div class="description-hover">
+                  <h3><a class="catalog-item-title">Sedona</a></h3>
+                  <p>Информационный сайт для туристов</p>
+                  <a class="btn price-btn" href="#">9900 руб.</a>
+                </div>
+                <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
+		      </li>
+		      <li class="catalog-item">
+			    <div class="description-hover">
+                  <h3><a class="catalog-item-title">Pink App</a></h3>
+                  <p>Продуктовый лендинг  приложения для iOs и Android</p>
+                  <a class="btn price-btn" href="#">9900 руб.</a>
+                </div>
+                <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
+              </li>
+	          <li class="catalog-item">
+			    <div class="description-hover">
+                  <h3><a class="catalog-item-title">Barbershop</a></h3>
+                  <p>Сайт салона красоты. Для мужчин, да.</p>
+                  <a class="btn price-btn" href="#">9900 руб.</a>
+                </div>	
+                <img src="img/img-barbershop.jpg" width="360" height="576" alt="Borodinski">
+	          </li>
+		      <li class="catalog-item">
+                <div class="description-hover">
+                  <h3><a class="catalog-item-title">Mishka</a></h3>
+                  <p>Интернет-магазин вязанных игрушек</p>
+                  <a class="btn price-btn" href="#">9900 руб.</a>
+                </div>	
+                <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
+		      </li>
+		      <li class="catalog-item">
+			    <div class="description-hover">
+                  <h3><a class="catalog-item-title">A plus</a></h3>
+                  <p>Лендинг курсов повышения квалификации</p>
+                  <a class="btn price-btn" href="#">9900 руб.</a>
+                </div>
+                <img src="img/img-aplus.jpg" width="360" height="576" alt="А plus">	
+		      </li>
+		      <li class="catalog-item">
+		        <div class="description-hover">
+                  <h3><a class="catalog-item-title">Кваст</a></h3>
+                  <p>Промо-сайт производителя крафтового кваса</p>
+                  <a class="btn price-btn" href="#">9900 руб.</a>
+                </div>
+                <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
+		      </li>
+		    </ul>
 		 
-          <ul class="pagination-list">
-            <li class="pagination-item pagination-item-current"><a>1</a></li>
-            <li class="pagination-item"><a href="#">2</a></li>
-            <li class="pagination-item"><a href="#">3</a></li>
-            <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
-          </ul>
-	    </section>
+            <ul class="pagination-list">
+              <li class="pagination-item pagination-item-current"><a>1</a></li>
+              <li class="pagination-item"><a href="#">2</a></li>
+              <li class="pagination-item"><a href="#">3</a></li>
+              <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
+            </ul>
+	      </section>
+	    </div>
 	  </div>
   	</main>
     <footer>
@@ -186,7 +188,6 @@
   	  </div>
   	  <div class="container">
   	  	<div class="footer-wrapper">
-  	      <div class="social">
   	      	<div class="discount">
   		      <b>Давайте дружить, это выгодно!</b>
               <p>Скидка 10% для друзей из социальных сетей.</p>
@@ -196,7 +197,6 @@
   		      <li><a class="social-button" href="#">Facebook</a></li>
   		      <li><a class="social-button" href="#">Instagram</a></li>
   		    </ul>
-  	      </div>
   	    </div>
   	  </div>
   	</footer>
