--- a/catalog.html
+++ b/catalog.html
@@ -21,8 +21,8 @@
   			<li><a href="contacts.html">Контакты</a></li>
   		  </ul>
   		  <ul class="shopping-navigation">
-            <li class="shopping-cart-link">
-            	<a href="cart.html">Корзина</a>
+            <li>
+            	<a class="shopping-cart-link" href="cart.html">Корзина</a>
             </li>
           </ul>
   		</nav>
@@ -40,20 +40,33 @@
   	  	    <h2 class="visually-hidden">Фильтр товаров</h2>
   	  	      <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                 <fieldset class="filter-group">
-              	  <legend>Стоимость</legend>
+              	  <legend>Стоимость:</legend>
+                  <div class="range-filter">
+                    <div class="range-controls">
+                      <div class="scale">
+                        <div class="bar"></div>
+                      </div>
+                      <div class="toggle toggle-min"></div>
+                      <div class="toggle toggle-max"></div>
+                    </div>
+                    <div class="price-controls">
+                      <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+                      <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+                    </div>
+                  </div>
                 </fieldset>
                 <fieldset class="filter-group">
                   <legend>Сетка</legend>
                   <ul class="filters-list">
-          	        <li>
+          	        <li class="filter-item">
           	      	  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="adaptive" id="filter-adaptive" checked>
           	      	  <label for="filter-adaptive">Адаптивная</label>
           	        </li>
-          	        <li>
+          	        <li class="filter-item">
           	      	  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="fixed" id="filter-fixed">
           	      	  <label for="filter-fixed">Фиксированная</label>
           	        </li>
-          	        <li>
+          	        <li class="filter-item">
           	      	  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="fluid" id="filter-fluid">
           	      	  <label for="filter-fluid">Резиновая</label>
           	        </li>
@@ -62,23 +75,23 @@
                 <fieldset class="filter-group">
                   <legend>Особенности</legend>
                   <ul class="filters-list">
-          	        <li>
+          	        <li class="filter-item">
           	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" id="filter-slider" checked>
           	      	  <label for="filter-slider">Слайдер</label>
           	        </li>
-          	        <li>
+          	        <li class="filter-item">
           	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="advantage-block" id="filter-advantage-block">
           	      	  <label for="filter-advantage-block">Блок преимуществ</label>
           	        </li>
-          	        <li>
+          	        <li class="filter-item">
           	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" id="filter-news" checked>
           	      	  <label for="filter-news">Новости</label>
           	        </li>
-          	        <li>
+          	        <li class="filter-item">
           	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="gallery" id="filter-gallery">
           	      	  <label for="filter-gallery">Галерея</label>
           	        </li>
-          	        <li>
+          	        <li class="filter-item">
           	      	  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="shopping-cart" id="filter-shopping-cart">
           	      	  <label for="filter-shopping-cart">Корзина</label>
           	        </li>
@@ -107,10 +120,10 @@
               </ul>
               <ul class="sorting-range">
                 <li>
-                  <button class="btn sorting-btn sorting-btn-down" type="button">Сортировка по убыванию</button>
+                  <a class="btn sorting-btn sorting-btn-down" href="#"><span class="visually-hidden">Сортировка по убыванию</span></a>
                 </li>
                 <li>
-                  <button class="btn sorting-btn sorting-btn-up" type="button">Сортировка по возрастанию</button>
+                  <a class="btn sorting-btn sorting-btn-up"><span class="visually-hidden">Сортировка по возрастанию</span></a>
                 </li>
               </ul>
             </div>
@@ -119,49 +132,55 @@
 		      <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Sedona</a></h3>
-                  <p>Информационный сайт для туристов</p>
+                  <p>Информационный сайт <br> для туристов</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
 		      </li>
 		      <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Pink App</a></h3>
-                  <p>Продуктовый лендинг  приложения для iOs и Android</p>
+                  <p>Продуктовый лендинг  <br> приложения для iOs и Android</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
               </li>
 	          <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Barbershop</a></h3>
-                  <p>Сайт салона красоты. Для мужчин, да.</p>
+                  <p>Сайт салона красоты. <br> Для мужчин, да.</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>	
+                <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/img-barbershop.jpg" width="360" height="576" alt="Borodinski">
 	          </li>
 		      <li class="catalog-item">
                 <div class="description-hover">
                   <h3><a class="catalog-item-title">Mishka</a></h3>
-                  <p>Интернет-магазин вязанных игрушек</p>
+                  <p>Интернет-магазин <br> вязанных игрушек</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>	
+                <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
 		      </li>
 		      <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">A plus</a></h3>
-                  <p>Лендинг курсов повышения квалификации</p>
+                  <p>Лендинг курсов повышения <br> квалификации</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/img-aplus.jpg" width="360" height="576" alt="А plus">	
 		      </li>
 		      <li class="catalog-item">
 		        <div class="description-hover">
                   <h3><a class="catalog-item-title">Кваст</a></h3>
-                  <p>Промо-сайт производителя крафтового кваса</p>
+                  <p>Промо-сайт производителя <br> крафтового кваса</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
 		      </li>
 		    </ul>
@@ -180,23 +199,29 @@
       <div class="map">
   	    <div class="footer-contacts">
   	      <b>Nёrds design studio</b>
-  		  <p>191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д.19/8</p>
+  		  <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д.19/8</p>
   		  <p>тел. +7(812)275-75-75</p>
   		  <a class="btn" href="#">Напишите нам</a>
   	    </div>
-  	    <img src="img/map.jpg"> <!--как разместить значок нерд на карте?-->
+  	      <img src="img/map.jpg" width="1440" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург"> 
   	  </div>
   	  <div class="container">
   	  	<div class="footer-wrapper">
-  	      	<div class="discount">
-  		      <b>Давайте дружить, это выгодно!</b>
-              <p>Скидка 10% для друзей из социальных сетей.</p>
-            </div>
-  		    <ul class="footer-social-buttons">
-  		      <li><a class="social-button" href="#">Vkontakte</a></li>
-  		      <li><a class="social-button" href="#">Facebook</a></li>
-  		      <li><a class="social-button" href="#">Instagram</a></li>
-  		    </ul>
+  	      <div class="discount">
+  		    <b>Давайте дружить, это выгодно!</b>
+            <p>Скидка 10% для друзей из социальных сетей.</p>
+          </div>
+  		  <ul class="footer-social-buttons">
+  		    <li><a class="social-button" href="#"><span class="visually-hidden">Vkontakte</span>
+  		      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
+  		    </a></li>
+  		    <li><a class="social-button" href="#"><span class="visually-hidden">Facebook</span>
+  		      <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+  		    </a></li>
+  		    <li><a class="social-button" href="#"><span class="visually-hidden">Instagram</span>
+  		      <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+  		    </a></li>
+  		  </ul>
   	    </div>
   	  </div>
   	</footer>
