--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           </div>
           <ul class="slider-list">
             <li class="slider-item">
-              <h3>Долго, дорого, скрупулезно</h3>
-              <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+              <h3>Долго, дорого, скрупулезно.</h3>
+              <p>Математически выверенный дизайн <br> для вашего сайта или мобильного приложения</p>
               <a class="slider-item-btn btn" href="studio.html">Узнать больше</a>
             </li>
             <li class="slider-item">
@@ -76,7 +76,7 @@
 		    <li class="products-item">
 		      <img src="img/illustration-2.png">
   			  <h3>Приложения</h3>
-  			  <p>Покорите топ-10 приложений в AppleStore и Google Play</p>
+  			  <p>Покорите топ-10 приложений в AppStore и Google Play</p>
   			  <a class="btn btn-app" href="#">Заказать</a>
   		    </li>
 		    <li class="products-item">
@@ -91,13 +91,13 @@
   		<section class="about-us">
   		  <div class="about-us-info">
   		    <h2 class="visually-hidden">О нас</h2>
-  			<b class="about-us-title">Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+  			<b class="about-us-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
   			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
   			<p class="orders-title">Выполняем заказы на разработку:</p>
   			<ul class="orders-list">
-  			  <li>Веб-сайтов любой сложности</li>
-  			  <li>Мобильных приложений для IOS и Android</li>
-  			  <li>Слайдшоу и видео для корпоративных презентаций</li>
+  			  <li class="orders-item">Веб-сайтов любой сложности</li>
+  			  <li class="orders-item">Мобильных приложений для IOS и Android</li>
+  			  <li class="orders-item">Слайдшоу и видео для корпоративных презентаций</li>
   			</ul>
   		  </div> 
   		  <div class="about-us-stats">
@@ -107,9 +107,9 @@
   		      <b>С 2004 года любим точность во всем:</b>
   			  <table class="statistics">
   			    <tr>
-  				  <td>146%</td>
-  				  <td>100%</td>
-  				  <td>50%</td>
+  				  <td>146<sup>%</sup></td>
+  				  <td>100<sup>%</sup></td>
+  				  <td>50<sup>%</sup></td>
   			    </tr>
   			    <tr>
   				  <th>Уровень самоотдачи</th>
@@ -124,16 +124,16 @@
   		<section class="partners">
   		  <h2 class="visually-hidden">Наши партнеры</h2>
   		  <ul class="partners-list">
-  		    <li>
+  		    <li class="partners-item">
   			  <a  class="partners-link" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" width="260" height="119" alt="Логотип html-academy"></a>
   			</li>
-  			<li>
+  			<li class="partners-item">
   			  <a class="partners-link" href="#"><img src="img/logo-2.png" width="260" height="119" alt="Логотип borodinski"></a>
   			</li>
-  			<li>
+  			<li class="partners-item">
   			  <a class="partners-link" href="#"><img src="img/logo-3.png" width="260" height="119" alt="Логотип pink"></a>
   			</li>
-  			<li>
+  			<li class="partners-item">
   			  <a class="partners-link" href="#"><img src="img/logo-4.png" width="260" height="119" alt="Логотип mishka"></a>
   			</li>
   		  </ul>
@@ -176,15 +176,15 @@
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       	<p class="feedback-item">
       	  <label for="feedback-name">Ваше имя:</label>
-      	  <input id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+      	  <input class="feedback-name" id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
         </p>
         <p class="feedback-item">
           <label for="feedback-email">Ваш e-mail:</label>
-      	  <input id="feedback-email" type="email" name="email" value="" placeholder="email@example.com">
+      	  <input class="feedback-email" id="feedback-email" type="email" name="email" value="" placeholder="email@example.com">
         </p>
         <p class="feedback-item">
-          <label for="feedback-text-of-the-letter">Текст письма:</label>
-      	  <input id="feedback-text-of-the-letter" type="text" name="text-of-the-letter" value="" placeholder="В свободной форме">  
+          <label for="feedback-text">Текст письма:</label>
+      	  <input class="feedback-text" id="feedback-text" type="text" name="text-of-the-letter" value="" placeholder="В свободной форме">  
       	</p>  
       	<button class="btn" type="submit">Отправить</button>
       </form>
