--- a/catalog.html
+++ b/catalog.html
@@ -120,10 +120,10 @@
               </ul>
               <ul class="sorting-range">
                 <li>
-                  <a class="sorting-btn-down" href="#"><span class="visually-hidden">Сортировка по убыванию</span></a>
+                  <a class="sorting-btn sorting-btn-down active" href="#"><span class="visually-hidden">Сортировка по убыванию</span></a>
                 </li>
                 <li>
-                  <a class="sorting-btn-up"><span class="visually-hidden">Сортировка по возрастанию</span></a>
+                  <a class="sorting-btn sorting-btn-up"><span class="visually-hidden">Сортировка по возрастанию</span></a>
                 </li>
               </ul>
             </div>
@@ -132,7 +132,7 @@
 		      <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Sedona</a></h3>
-                  <p>Информационный сайт <br> для туристов</p>
+                  <p>Информационный сайт для туристов</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
                 <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
@@ -140,7 +140,7 @@
 		      <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Pink App</a></h3>
-                  <p>Продуктовый лендинг  <br> приложения для iOs и Android</p>
+                  <p>Продуктовый лендинг приложения для iOs и Android</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
                 <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
@@ -148,7 +148,7 @@
 	          <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Barbershop</a></h3>
-                  <p>Сайт салона красоты. <br> Для мужчин, да.</p>
+                  <p>Сайт салона красоты. Для мужчин, да.</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>	
                 <img src="img/img-barbershop.jpg" width="360" height="576" alt="Borodinski">
@@ -156,7 +156,7 @@
 		      <li class="catalog-item">
                 <div class="description-hover">
                   <h3><a class="catalog-item-title">Mishka</a></h3>
-                  <p>Интернет-магазин <br> вязанных игрушек</p>
+                  <p>Интернет-магазин вязанных игрушек</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>	
                 <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
@@ -164,7 +164,7 @@
 		      <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">A plus</a></h3>
-                  <p>Лендинг курсов повышения <br> квалификации</p>
+                  <p>Лендинг курсов повышения квалификации</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
                 <img src="img/img-aplus.jpg" width="360" height="576" alt="А plus">	
@@ -172,7 +172,7 @@
 		      <li class="catalog-item">
 		        <div class="description-hover">
                   <h3><a class="catalog-item-title">Кваст</a></h3>
-                  <p>Промо-сайт производителя <br> крафтового кваса</p>
+                  <p>Промо-сайт производителя крафтового кваса</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
                 <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
@@ -189,15 +189,17 @@
 	    </div>
 	  </div>
   	</main>
-    <footer>
+  	<footer>
       <div class="map">
-  	    <div class="footer-contacts">
-  	      <b>Nёrds design studio</b>
-  		  <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д.19/8</p>
-  		  <p>тел. +7(812)275-75-75</p>
-  		  <a class="btn" href="#">Напишите нам</a>
+        <div class="container">
+  	      <div class="footer-contacts">
+  	        <b>Nёrds design studio</b>
+  		    <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д.19/8</p>
+  		    <p>тел. +7(812)275-75-75</p>
+  		    <a class="btn" href="#">Напишите нам</a>
+  	      </div>
   	    </div>
-  	      <img src="img/map.jpg" width="1440" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург"> 
+  	    <img src="img/map.jpg" width="1440" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург"> 
   	  </div>
   	  <div class="container">
   	  	<div class="footer-wrapper">
