--- a/catalog.html
+++ b/catalog.html
@@ -109,7 +109,7 @@
               <b>Сортировать:</b>
 		      <ul class="sorting-buttons">
                 <li>
-                  <a class="sorting-option" href="#">По цене</a>
+                  <a class="sorting-option active" href="#">По цене</a>
                 </li>
                 <li>
                   <a class="sorting-option" href="#">По типу</a>
@@ -132,7 +132,7 @@
 		      <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Sedona</a></h3>
-                  <p>Информационный сайт для туристов</p>
+                  <p>Информационный сайт для&nbsp;туристов</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
                 <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
@@ -140,7 +140,7 @@
 		      <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Pink App</a></h3>
-                  <p>Продуктовый лендинг приложения для iOs и Android</p>
+                  <p>Продуктовый лендинг приложения&nbsp;для iOS и Android</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>
                 <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
@@ -148,7 +148,7 @@
 	          <li class="catalog-item">
 			    <div class="description-hover">
                   <h3><a class="catalog-item-title">Barbershop</a></h3>
-                  <p>Сайт салона красоты. Для мужчин, да.</p>
+                  <p>Сайт салона красоты. Для&nbsp;мужчин, да.</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>	
                 <img src="img/img-barbershop.jpg" width="360" height="576" alt="Borodinski">
@@ -156,7 +156,7 @@
 		      <li class="catalog-item">
                 <div class="description-hover">
                   <h3><a class="catalog-item-title">Mishka</a></h3>
-                  <p>Интернет-магазин вязанных игрушек</p>
+                  <p>Интернет-магазин вязанных&nbsp;игрушек</p>
                   <a class="btn price-btn" href="#">9900 руб.</a>
                 </div>	
                 <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
@@ -221,20 +221,20 @@
   	    </div>
   	  </div>
   	</footer>
-  	<div class="feedback">
+  		<div class="feedback">
       <h2>Напишите нам</h2>
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       	<p class="feedback-item">
       	  <label for="feedback-name">Ваше имя:</label>
-      	  <input class="feedback-name" id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+      	  <input class="feedback-field" id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
         </p>
         <p class="feedback-item">
           <label for="feedback-email">Ваш e-mail:</label>
-      	  <input class="feedback-email" id="feedback-email" type="email" name="email" value="" placeholder="email@example.com">
+      	  <input class="feedback-field" id="feedback-email" type="email" name="email" value="" placeholder="email@example.com">
         </p>
         <p class="feedback-item">
           <label for="feedback-text">Текст письма:</label>
-      	  <input class="feedback-text" id="feedback-text" type="text" name="text-of-the-letter" value="" placeholder="В свободной форме">  
+      	  <textarea id="feedback-text" type="text" name="text-of-the-letter" placeholder="В свободной форме"></textarea>  
       	</p>  
       	<button class="btn" type="submit">Отправить</button>
       </form>
