--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       	<p class="feedback-item">
       	  <label for="feedback-name">Ваше имя:</label>
-      	  <input class="feedback-name" id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+      	  <input class="feedback-field" id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
         </p>
         <p class="feedback-item">
           <label for="feedback-email">Ваш e-mail:</label>
-      	  <input class="feedback-email" id="feedback-email" type="email" name="email" value="" placeholder="email@example.com">
+      	  <input class="feedback-field" id="feedback-email" type="email" name="email" value="" placeholder="email@example.com">
         </p>
         <p class="feedback-item">
           <label for="feedback-text">Текст письма:</label>
-      	  <input class="feedback-text" id="feedback-text" type="text" name="text-of-the-letter" value="" placeholder="В свободной форме">  
+      	  <textarea id="feedback-text" type="text" name="text-of-the-letter" placeholder="В свободной форме"></textarea>  
       	</p>  
       	<button class="btn" type="submit">Отправить</button>
       </form>
