--- a/index.html
+++ b/index.html
@@ -147,11 +147,14 @@
   	      <div class="footer-contacts">
   	        <b>Nёrds design studio</b>
   		    <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д.19/8</p>
-  		    <p>тел. +7(812)275-75-75</p>
-  		    <a class="btn" href="#">Напишите нам</a>
+  		    <p>тел. +7 (812) 275-75-75</p>
+  		    <a class="btn open-modal-btn" href="#">Напишите нам</a>
   	      </div>
   	    </div>
-  	    <img src="img/map.jpg" width="1440" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург"> 
+  	    <iframe src="https://yandex.ru/map-widget/v1/-/CBuyA-HzxD" width="100%" height="416" frameborder="1" allowfullscreen="true"></iframe>
+  	    <div class="map-img">
+  	      <img src="img/map.jpg" width="100%" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
+  	    </div>
   	  </div>
   	  <div class="container">
   	  	<div class="footer-wrapper">
@@ -192,5 +195,8 @@
       </form>
       <button class="modal-close" type="btn">Закрыть</button>
     </div>
+    
+    <script src="js/popup-mini.js"></script>
+
   </body>
 </html>
