--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Дизайн-студия Нёрдс</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
   	<header class="main-header">
@@ -22,7 +22,7 @@
   		  </ul>
   		  <ul class="shopping-navigation">
             <li>
-            	<a class="shopping-cart-link" href="cart.html">Корзина</a>
+              <a class="shopping-cart-link" href="cart.html">Корзина</a>
             </li>
           </ul>
   		</nav>
@@ -68,19 +68,19 @@
   		  <h2 class="visually-hidden">Наши продукты</h2>
   		  <ul class="products-list">
   		    <li class="products-item">
-  		      <img src="img/illustration-1.png">
+  		      <img src="img/illustration-1.png" width="300" height="146" alt="Изображение с ноутбуком">
   		      <h3>Веб-сайты</h3>
   			  <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
   			  <a class="btn btn-web" href="#">Заказать</a>
   		    </li>
 		    <li class="products-item">
-		      <img src="img/illustration-2.png">
+		      <img src="img/illustration-2.png" width="300" height="146" alt="Изображение с телефонами">
   			  <h3>Приложения</h3>
   			  <p>Покорите топ-10 приложений в AppStore и Google Play</p>
   			  <a class="btn btn-app" href="#">Заказать</a>
   		    </li>
 		    <li class="products-item">
-		      <img src="img/illustration-3.png">
+		      <img src="img/illustration-3.png" width="300" height="146" alt="Изображение с флипчартом">
   			  <h3>Презентации</h3>
   			  <p>Вы даже не подозреваете насколько вы изумительны!</p>
   			  <a class="btn btn-presentation" href="#">Заказать</a>
@@ -148,12 +148,12 @@
   	        <b>Nёrds design studio</b>
   		    <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д.19/8</p>
   		    <p>тел. +7 (812) 275-75-75</p>
-  		    <a class="btn open-modal-btn" href="#">Напишите нам</a>
+  		    <a class="btn open-modal-btn" href="write-us.html">Напишите нам</a>
   	      </div>
   	    </div>
-  	    <iframe src="https://yandex.ru/map-widget/v1/-/CBuyA-HzxD" width="100%" height="416" frameborder="1" allowfullscreen="true"></iframe>
+  	    <iframe src="https://yandex.ru/map-widget/v1/-/CBuyA-HzxD"></iframe>
   	    <div class="map-img">
-  	      <img src="img/map.jpg" width="100%" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
+  	      <img src="img/map.jpg" width="1440" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
   	    </div>
   	  </div>
   	  <div class="container">
@@ -176,6 +176,7 @@
   	    </div>
   	  </div>
   	</footer>
+  	
   	<div class="feedback">
       <h2>Напишите нам</h2>
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
@@ -189,14 +190,14 @@
         </p>
         <p class="feedback-item">
           <label for="feedback-text">Текст письма:</label>
-      	  <textarea id="feedback-text" type="text" name="text-of-the-letter" placeholder="В свободной форме"></textarea>  
+      	  <textarea id="feedback-text" name="text-of-the-letter" placeholder="В свободной форме"></textarea>  
       	</p>  
       	<button class="btn" type="submit">Отправить</button>
       </form>
-      <button class="modal-close" type="btn">Закрыть</button>
+      <button class="modal-close" type="button">Закрыть</button>
     </div>
     
-    <script src="js/popup-mini.js"></script>
+    <script src="js/popup.min.js"></script>
 
   </body>
 </html>
