--- a/catalog.html
+++ b/catalog.html
@@ -201,7 +201,7 @@
   		    <a class="btn open-modal-btn" href="write-us.html">Напишите нам</a>
   	      </div>
   	    </div>
-  	    <iframe src="https://yandex.ru/map-widget/v1/-/CBuyA-HzxD" allowfullscreen="true"></iframe>
+  	    <iframe src="https://yandex.ru/map-widget/v1/-/CBuyA-HzxD"></iframe>
   	    <div class="map-img">
   	      <img src="img/map.jpg" width="1440" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург"> 
   	    </div>
